--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
     <script src="{{ url_for('static', filename='papaparse.min.js') }}"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="{{ url_for('static', filename='Script/dataParser.js') }}"></script>
+    <script src="{{ url_for('static', filename='Script/RadarChart.js') }}"></script>
     <script src="{{ url_for('static', filename='Script/groupedBarChart.js') }}"></script>
-    <script src="{{ url_for('static', filename='Script/radarChart.js') }}"></script>
     <script src="{{ url_for('static', filename='Script/scatterChart.js') }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
