--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,7 @@
 <body>
     <div class="navigation-bar">
         <ul class="navigation-bar">
-            <li><div class="logo"><img src="{{ url_for('static', filename='Nuclear_Court Science Logo.png') }}"
-                                       width="200"></div></li>
+            <li><div class="logo"><img src="{{ url_for('static', filename='Nuclear_Court Science Logo.png') }}" style='width: 200px'></div></li>
             <li class="navigation-bar-item" style="margin-right: 2%;"><a href="#contact">CONTACT</a></li>
             <li class="navigation-bar-item"><a href="#demo">VIZ LAB</a></li>
             <li class="navigation-bar-item"><a href="#home">HOME</a></li>
