--- a/static/style.css
+++ b/static/style.css
@@ -149,6 +149,13 @@ input[type=checkbox] {
     overflow-y: scroll;
 }
 
+.drop-zone-scatter {
+    width: 100%;
+    height: 15vh;
+    border: 2px solid black;
+    background: lightgrey;
+}
+
 .div-container {
     width: 100%;
     height: 25vh;
@@ -235,6 +242,7 @@ input[type=checkbox] {
 }
 
 .display-chart {
+    float: right;
     width: 95%;
     height: 60vh;
 }
@@ -279,6 +287,7 @@ div.tooltip {
     fill: black;
 }
 
+/*
 img {
     display: block;
     max-width:600px;
@@ -287,3 +296,5 @@ img {
     height: auto;
     margin: auto;
   }
+
+ */
