--- a/templates/index.html
+++ b/templates/index.html
@@ -550,6 +550,7 @@
         if(radar_input.checked) {
             console.log(checked_charts[checked_charts.length-1]);
             if(checked_charts[checked_charts.length-1] == "Scatter") {
+                resetButton();
                 stats_div.innerHTML = "<div>\n" +
                     "            <p>Stats to Plot</p>\n" +
                     "            <div class='drop-zone' id='drop-stats' ondrop='drop(event)' ondragover='allowDropStats(event)'></div>\n" +
@@ -585,6 +586,7 @@
         if(bar_input.checked) {
             console.log(checked_charts[checked_charts.length-1]);
             if(checked_charts[checked_charts.length-1] == "Scatter") {
+                resetButton();
                 stats_div.innerHTML = "<div>\n" +
                     "            <p>Stats to Plot</p>\n" +
                     "            <div class='drop-zone' id='drop-stats' ondrop='drop(event)' ondragover='allowDropStats(event)'></div>\n" +
@@ -632,6 +634,7 @@
             document.getElementById('starter-img').src = 'static/Scatter-Chart.png';
             //console.log(document.getElementById('starter-img').src);
             img_src = "static/Scatter-Chart.png";
+            resetButton();
             stats_div.innerHTML = "<div style='float: left; margin-right: 10%; width: 45%'>\n" +
                 "            <p>X-Axis</p>\n" +
                 "            <div class='drop-zone-scatter' id='drop-stats-x' ondrop='dropScatter(event)' ondragover='allowDropScatter(event)'></div>\n" +
