--- a/templates/index.html
+++ b/templates/index.html
@@ -624,7 +624,7 @@
             var stats = document.getElementById('drop-stats').children.length;
             var players = document.getElementById('drop-players').children.length;
             stats_message.innerHTML = "*Drop 2 stats";
-            players_message.innerHTML = "*Drop players to highlight;";
+            players_message.innerHTML = "*Drop players to highlight";
             max_players=100;
             max_stats=2;
             min_stats = 2;
