--- a/templates/camp.html
+++ b/templates/camp.html
@@ -5,15 +5,8 @@
     <title>Court Science - Virtual Camp</title>
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:700%7CMontserrat:400,600" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"/>
-    <link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
-    <script src="{{ url_for('static', filename='papaparse.min.js') }}"></script>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="{{ url_for('static', filename='Script/dataParser.js') }}"></script>
-    <script src="{{ url_for('static', filename='Script/RadarChart.js') }}"></script>
-    <script src="{{ url_for('static', filename='Script/groupedBarChart.js') }}"></script>
-    <script src="{{ url_for('static', filename='Script/scatterChart.js') }}"></script>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,20 +21,38 @@
             <li class="navigation-bar-item"><a href="{{ url_for('home') }}">HOME</a></li>
         </ul>
     </div>
-    <h2 class="title">COURT SCIENCE CAMPS</h2>
-    <object data="{{ url_for('static', filename='Court Science Camp Flyer.pdf') }}#view=FitH" type="application/pdf" style="width: 800px; height: 1000px; display: block; margin: auto;">
-        <embed src="{{ url_for('static', filename='Court Science Camp Flyer.pdf') }}#view=FitH" type="application/pdf" />
+    <h2 class="title" style="margin-top: 50px;">COURT SCIENCE CAMPS</h2>
+    <object data="{{ url_for('static', filename='Court Science Camp Graphic.pdf') }}#view=Fit" type="application/pdf" style="width: 700px; height: 850px; display: block; margin: auto; margin-top: 20px;">
+        <embed src="{{ url_for('static', filename='Court Science Camp Graphic.pdf') }}#view=Fit" type="application/pdf" />
     </object>
-    <div class="contact-form">
-		<h4>Register Now</h4>
+    <div class="registration-form" style="margin-top: 50px; margin-bottom: 10px;">
+		<h4 class="title" style="font-size: 32px">Register Now</h4>
 		<form action="https://formspree.io/xaypdvnj" method="POST">
-            <input class="input" type="text" name="name" placeholder="Full Name">
-            <input class="input" type="text" name="name" placeholder="School">
-            <input class="input" type="text" name="name" placeholder="Grade">
-            <input class="input" type="text" name="name" placeholder="Country">
-            <input class="input" type="email" name="email" placeholder="E-mail">
-            <textarea class="input" name="message" placeholder="Enter any Questions or Comments"></textarea>
-            <button type="submit" class="main-button icon-button pull-right">Submit</button>
+            <div class="form-group">
+                <label for="name">Full Name</label>
+                <input class="form-control" type="text" id="name" name="name" placeholder="Enter Name">
+            </div>
+            <div class="form-group">
+                <label for="school">School</label>
+                <input class="form-control" type="text" id="school" name="school" placeholder="Enter School">
+            </div>
+            <div class="form-group">
+                <label for="grade">Grade</label>
+                <input class="form-control" type="text" id="grade" name="grade" placeholder="Enter Grade">
+            </div>
+            <div class="form-group">
+                <label for="country">Country</label>
+                <input class="form-control" type="text" id="country" name="country" placeholder="Enter Country">
+            </div>
+            <div class="form-group">
+                <label for="email">E-mail</label>
+                <input class="form-control" type="email" id="email" name="email" placeholder="Enter E-mail">
+            </div>
+            <div class="form-group">
+                <label for="questions">Additional Comments</label>
+                <textarea class="form-control" id="questions" name="questions-comments" rows="3" placeholder="Enter any Questions or Comments"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
