--- a/static/style.css
+++ b/static/style.css
@@ -73,6 +73,12 @@ p > a {
     font-size: 40px;
 }
 
+.chart-title {
+    font-family: "Arial Black", Gadget, sans-serif;
+    text-align: center;
+    font-size: 20px;
+}
+
 .body-text {
     font-family: Arial, Gadget, sans-serif;
     text-align: center;
