--- a/templates/camp.html
+++ b/templates/camp.html
@@ -22,8 +22,8 @@
         </ul>
     </div>
     <h2 class="title" style="margin-top: 50px;">COURT SCIENCE CAMPS</h2>
-    <object data="{{ url_for('static', filename='Court Science Camp Graphic.pdf') }}#view=Fit" type="application/pdf" style="width: 700px; height: 850px; display: block; margin: auto; margin-top: 20px;">
-        <embed src="{{ url_for('static', filename='Court Science Camp Graphic.pdf') }}#view=Fit" type="application/pdf" />
+    <object data="{{ url_for('static', filename='Court Science Camp Flyer.pdf') }}#view=Fit" type="application/pdf" style="width: 700px; height: 850px; display: block; margin: auto; margin-top: 20px;">
+        <embed src="{{ url_for('static', filename='Court Science Camp Flyer.pdf') }}#view=Fit" type="application/pdf" />
     </object>
     <div class="registration-form" style="margin-top: 50px; margin-bottom: 10px;">
 		<h4 class="title" style="font-size: 32px">Register Now</h4>
